attached_assets/Pasted-2025-07-16T02-21-37Z-info-Deployment-d33aac2c-d0a0-4178-9802-12094a77373a-2025-07-16T02-21-37Z-inf-1752632683080_1752632683081.txt
2025-07-16T02:21:37Z info: Deployment: d33aac2c-d0a0-4178-9802-12094a77373a
2025-07-16T02:21:37Z info: Build: 97af8e2b-c653-411b-b4de-9a66746d6112
2025-07-16T02:21:37Z info: Connecting to builder
2025-07-16T02:21:39Z info: Builder connected
2025-07-16T02:21:41Z info: Installing packages
2025-07-16T02:21:42Z info: Starting Build

> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist


vite v5.4.19 building for production...

transforming...

Browserslist: browsers data (caniuse-lite) is 9 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme

✓ 1786 modules transformed.

rendering chunks...

computing gzip size...

../dist/public/index.html                   0.63 kB │ gzip:   0.38 kB

../dist/public/assets/index-trfgBt6q.js   758.07 kB │ gzip: 208.92 kB


(!) Some chunks are larger than 500 kB after minification. Consider:
- Using dynamic import() to code-split the application
- Use build.rollupOptions.output.manualChunks to improve chunking: https://rollupjs.org/configuration-options/#output-manualchunks
- Adjust chunk size limit for this warning via build.chunkSizeWarningLimit.

✓ built in 6.10s


  dist/index.js  445.9kb

⚡ Done in 383ms

npm notice
npm notice New major version of npm available! 10.8.2 -> 11.4.2
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.4.2
npm notice To update run: npm install -g npm@11.4.2
npm notice

2025-07-16T02:21:53Z info: Pushing pid1 binary layer...
2025-07-16T02:21:57Z info: Pushing hosting layer...
2025-07-16T02:21:57Z info: Pushing Repl layer...
2025-07-16T02:21:58Z info: Retrieved cached nix layer
2025-07-16T02:21:59Z info: Created hosting layer
2025-07-16T02:22:01Z info: Created pid1 binary layer
2025-07-16T02:22:58Z info: Created Repl layer
2025-07-16T02:22:59Z info: Pushed image manifest
2025-07-16T02:23:00Z info: Pushed soci index manifest
2025-07-16T02:23:05Z info: Creating Autoscale service
starting up user application
Node.js v20.18.1
npm notice New major version of npm available! 10.8.2 -> 11.4.2
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
> NODE_ENV=production node dist/index.js
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)

SyntaxError: The requested module '@google/genai' does not provide an export named 'GoogleGenerativeAI'
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
         ^^^^^^^^^^^^^^^^^^
Node.js v20.18.1
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)

crash loop detected